--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
       href="https://unpkg.com/vue-router@3.1.3/dist/vue-router.js"
       as="script"
     />
+    <link
+      rel="preload"
+      href="/socket.io/socket.io.js"
+      as="script"
+    />
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -82,7 +87,7 @@
 
     <template id="home-route">
       <div>
-        Hello
+        <jamroom :bpm="80"></jamroom>
       </div>
     </template>
     <script>
@@ -91,11 +96,59 @@
     </script>
     <style>
     </style>
+
+    <!-- ############################################################### -->
+
+    <template id="jamroom-component">
+      <div class="jamroom">
+        {{status}}
+        <button v-if="status === 'ready'" @click="start">
+          start
+        </button>
+      </div>
+    </template>
+    <script>
+      App.registerComponent('jamroom', {
+        data() {
+          return {
+            status: 'connecting'
+          }
+        },
+        mounted() {
+          const socket = io()
+          socket.on('ready to jam', (data) => {
+            console.log(data.currentTime);
+            this.status = 'ready'
+          })
+          socket.on('connect', () => {
+            this.status = 'preparing'
+            socket.emit('jam')
+          })
+          this.socket = socket
+        },
+        methods: {
+          async start() {
+            this.status = 'starting'
+            try {
+              
+            } catch (e) {
+            const audioContext = new AudioContext()
+            this.status = 'started'
+              
+            }
+          }
+        }
+      })
+    </script>
+    <style>
+    </style>
+
     <!-- ############################################################### -->
 
     <!-- Load the Vue dependency -->
     <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.1.3/dist/vue-router.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
     <!-- Start the runtime -->
     <script>
