--- a/public/index.html
+++ b/public/index.html
@@ -101,10 +101,12 @@
 
     <template id="jamroom-component">
       <div class="jamroom">
-        {{status}}
+        <strong>{{status}}</strong>
         <button v-if="status === 'ready'" @click="start">
           start
         </button>
+        <br>
+        {{ message }}
       </div>
     </template>
     <script>
@@ -162,10 +164,12 @@
         data() {
           return {
             status: 'connecting',
+            message: 'Initializing...'
           }
         },
         mounted() {
           const socket = io()
+          this.message = 'Connecting to server...'
           socket.on('ready to jam', (data) => {
             console.log(data)
             this.sync = {
@@ -175,7 +179,7 @@
             this.status = 'ready'
           })
           socket.on('connect', () => {
-            this.status = 'preparing'
+            this.message = 'Preparing to initialize jam session...'
             socket.emit('jam')
           })
           this.socket = socket
